# stayatscandinavia

./: .env.example  .gitignore  APP_STRUCTURE.md  README.md  REDESIGN_CHECKLIST.md  REDESIGN_SUMMARY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: check-frontend.yml  release-desktop.yml  release-splitfire-desktop-windows-microsoft-store.yml  (+1 more)
assets/aso/: README.md  (+8 more)
docs/: APP_STORE_LISTING.md  BEFORE_AFTER.md  CHANGES.md  COLOR_UPDATE_SUMMARY.md  HAPTIC_FEEDBACK.md  I18N_GUIDE.md  I18N_IMPLEMENTATION_CHECKLIST.md  I18N_SUMMARY.md  MIGRATION_GUIDE.md  PLAY_STORE_LISTING.md  QUICK_REFERENCE.md  SAS_BRAND_COLORS.md  VISUAL_COLOR_COMPARISON.md
scripts/: generate-icon-mas.sh  generate-icon-mobile.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements-appstore.plist  Info.plist  tauri.conf.json  tauri.prod-android-playstore.conf.json  tauri.prod-ios-appstore.conf.json  tauri.prod-linux.conf.json  tauri.prod-macos-appstore.conf.json  tauri.prod-macos.conf.json  tauri.prod-windows-microsoftstore.conf.json  tauri.prod-windows.conf.json
src-tauri/capabilities/: android.json  default.json
src-tauri/gen-override/android/: keystore.properties
src-tauri/gen-override/android/app/: build.gradle.kts
src-tauri/gen-override/android/app/src/main/: AndroidManifest.xml
src-tauri/icons/: icon-debug.icns  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/google/: command_get_consent_url.rs  command_get_profile.rs  command_get_token.rs  mod.rs
src-tauri/src/setup/: command_start_server.rs  mod.rs  store.rs
(+23 files in other folders)
