[package]
name = "stay"
version = "1.0.0"
description = "TutorialGitar App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
dotenv_codegen = "0.15"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.15"
smbcloud-model = "0.3"
smbcloud-networking-account = "0.3"
tauri = { version = "2", features = [] }
tauri-plugin-haptics = "2"
tauri-plugin-log = { features = ["colored"], version = "2" }
tauri-plugin-oauth = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tsync = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
